# snowman

./: .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: django.yml
contrib/: env-sample
touristspots/: asgi.py  conftest.py  settings.py  urls.py  wsgi.py
touristspots/api/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
touristspots/api/migrations/: 0001_initial.py  0002_auto_20200725_1744.py  0003_auto_20200726_1316.py  0004_auto_20200728_1829.py
touristspots/api/tests/: test_api.py  test_api_favorites.py  test_api_pictures.py  test_api_root.py  test_api_touristspots.py  test_api_version.py
touristspots/base/: admin.py  apps.py  models.py  urls.py  views.py
touristspots/base/migrations/: 0001_initial.py
touristspots/base/static/css/: business-casual.css  business-casual.min.css
touristspots/base/templates/base/: base.html  footer.html  home.html
touristspots/base/tests/: test_home.py  test_urls.py  test_wsgi.py
